Fixed not visible react flow link

--- a/ProductionCalculator.Api/ClientApp/src/components/calculator/Calculator.scss
+++ b/ProductionCalculator.Api/ClientApp/src/components/calculator/Calculator.scss
@@ -19,3 +19,8 @@
         align-items: center;
     }
 }
+
+.react-flow__attribution a {
+    color: black !important;
+    text-decoration: underline !important;
+}
